test/classes/delete-free/owned/owned-record-instantiation-types-user-init-borrows-error.good
owned-record-instantiation-types-user-init-borrows-error.chpl:18: error: illegal cast from GenericCollection(MyClass) to GenericCollection(_owned(MyClass))
